--- a/doc/locale/fr/LC_MESSAGES/auto_examples/getting_started/signal_creation.po
+++ b/doc/locale/fr/LC_MESSAGES/auto_examples/getting_started/signal_creation.po
@@ -20,134 +20,133 @@ msgstr ""
 "Generated-By: Babel 2.17.0\n"
 
 msgid ":ref:`Go to the end <sphx_glr_download_auto_examples_getting_started_signal_creation.py>` to download the full example code."
-msgstr ""
+msgstr ":ref:`Aller à la fin <sphx_glr_download_auto_examples_getting_started_signal_creation.py>` pour télécharger le code d'exemple complet."
 
 msgid "Creating Signals"
-msgstr ""
+msgstr "Créer des signaux"
 
 msgid "This example focuses on creating 1D signal objects in Sigima."
-msgstr ""
+msgstr "Cet exemple se concentre sur la création d'objets signaux 1D dans Sigima."
 
 msgid "There are three primary methods to create signals in Sigima:"
-msgstr ""
+msgstr "Il existe trois méthodes principales pour créer des signaux dans Sigima :"
 
 msgid "**Synthetic data generation**: Using built-in parameter classes to create standard"
-msgstr ""
+msgstr "**Génération de données synthétiques** : Utilisation de classes de paramètres intégrées pour créer des"
 
 msgid "signal types (Gaussian, sine waves, random distributions, etc.)"
-msgstr ""
+msgstr "types de signaux standard (gaussien, ondes sinusoïdales, distributions aléatoires, etc.)"
 
 msgid "**Loading from files**: Importing data from various file formats"
-msgstr ""
+msgstr "**Chargement depuis des fichiers** : Importation de données à partir de différents formats de fichiers"
 
 msgid "**From NumPy arrays**: Creating objects directly from existing arrays"
-msgstr ""
+msgstr "**À partir de tableaux NumPy** : Création d'objets directement à partir de tableaux existants"
 
 msgid "Each method has its use cases, and Sigima provides a consistent interface for working with data regardless of its origin."
-msgstr ""
+msgstr "Chaque méthode a ses cas d'usage, et Sigima fournit une interface cohérente pour travailler avec les données quelle que soit leur origine."
 
 msgid "For visualization, we use helper functions from the ``sigima.tests.vistools`` module. This allows us to focus on Sigima's functionality rather than visualization details."
-msgstr ""
+msgstr "Pour la visualisation, nous utilisons des fonctions auxiliaires du module ``sigima.tests.vistools``. Cela nous permet de nous concentrer sur les fonctionnalités de Sigima plutôt que sur les détails de visualisation."
 
 msgid "Importing necessary modules"
-msgstr ""
+msgstr "Importation des modules nécessaires"
 
 msgid "First of all, we need to import the required modules."
-msgstr ""
+msgstr "Tout d'abord, nous devons importer les modules requis."
 
 msgid "Method 1: Creating signals from synthetic parameters"
-msgstr ""
+msgstr "Méthode 1 : Créer des signaux à partir de paramètres synthétiques"
 
 msgid "Sigima provides built-in generators for common signal types. This is the most convenient method when you need standard mathematical functions or random distributions."
-msgstr ""
+msgstr "Sigima fournit des générateurs intégrés pour les types de signaux courants. C'est la méthode la plus pratique lorsque vous avez besoin de fonctions mathématiques standard ou de distributions aléatoires."
 
 msgid "Available signal types include:"
-msgstr ""
+msgstr "Les types de signaux disponibles incluent :"
 
 msgid "Mathematical functions: Gaussian, Lorentzian, Sinc, Sine, Cosine, etc."
-msgstr ""
+msgstr "Fonctions mathématiques : Gaussienne, Lorentzienne, Sinc, Sinus, Cosinus, etc."
 
 msgid "Random distributions: Normal, Uniform, Poisson"
-msgstr ""
+msgstr "Distributions aléatoires : Normale, Uniforme, Poisson"
 
 msgid "Standard waveforms: Square, Sawtooth, Triangle"
-msgstr ""
+msgstr "Formes d'onde standard : Carré, Dent de scie, Triangle"
 
 msgid "Special functions: Planck (blackbody), Linear chirp, Step, Exponential"
-msgstr ""
+msgstr "Fonctions spéciales : Planck (corps noir), Chirp linéaire, Échelon, Exponentielle"
 
 msgid "Qt widget 1"
-msgstr ""
+msgstr "Widget Qt 1"
 
 msgid "Method 2: Loading signals from files"
-msgstr ""
+msgstr "Méthode 2 : Charger des signaux à partir de fichiers"
 
 msgid "Sigima can read signals from various file formats, automatically detecting the format and extracting metadata when available."
-msgstr ""
+msgstr "Sigima peut lire des signaux à partir de divers formats de fichiers, en détectant automatiquement le format et en extrayant les métadonnées lorsqu'elles sont disponibles."
 
 msgid "Supported formats include:"
-msgstr ""
+msgstr "Les formats pris en charge incluent :"
 
 msgid "Text files: CSV, TXT (with automatic delimiter detection)"
-msgstr ""
+msgstr "Fichiers texte : CSV, TXT (avec détection automatique du délimiteur)"
 
 msgid "Scientific formats: HDF5 (.h5sig), MAT-Files (.mat), NumPy (.npy)"
-msgstr ""
+msgstr "Formats scientifiques : HDF5 (.h5sig), Fichiers MAT (.mat), NumPy (.npy)"
 
 msgid "Specialized: MCA spectrum files (.mca), FT-Lab (.sig)"
-msgstr ""
+msgstr "Spécialisés : Fichiers de spectre MCA (.mca), FT-Lab (.sig)"
 
 msgid "Qt widget 2"
-msgstr ""
+msgstr "Widget Qt 2"
 
 msgid "It is interesting to remark here that when importing data from files, Sigima automatically extracts and preserves metadata when possible. This includes:"
-msgstr ""
+msgstr "Il est intéressant de remarquer ici que lors de l'importation de données à partir de fichiers, Sigima extrait et préserve automatiquement les métadonnées lorsque cela est possible. Cela inclut :"
 
 msgid "**Axis labels and units**: Column headers from CSV files, variable names from MAT-Files, etc."
-msgstr ""
+msgstr "**Étiquettes et unités des axes** : En-têtes de colonnes des fichiers CSV, noms de variables des fichiers MAT, etc."
 
 msgid "**Acquisition parameters**: DICOM headers, instrument settings, timestamps"
-msgstr ""
+msgstr "**Paramètres d'acquisition** : En-têtes DICOM, paramètres de l'instrument, horodatages"
 
 msgid "**Physical coordinates**: Pixel spacing, origin coordinates when stored in the file"
-msgstr ""
+msgstr "**Coordonnées physiques** : Espacement des pixels, coordonnées d'origine lorsqu'elles sont stockées dans le fichier"
 
 msgid "The extracted metadata is seamlessly integrated into the signal or image object, making it available for processing, analysis, and visualization without manual configuration."
-msgstr ""
+msgstr "Les métadonnées extraites sont intégrées de manière transparente dans l'objet signal ou image, les rendant disponibles pour le traitement, l'analyse et la visualisation sans configuration manuelle."
 
 msgid "Method 3: Creating signals from NumPy arrays"
-msgstr ""
+msgstr "Méthode 3 : Créer des signaux à partir de tableaux NumPy"
 
 msgid "When you already have data in NumPy arrays (from calculations, other libraries, or custom data sources), you can wrap them in Sigima signal objects to benefit from metadata handling and processing functions."
-msgstr ""
+msgstr "Lorsque vous disposez déjà de données dans des tableaux NumPy (provenant de calculs, d'autres bibliothèques ou de sources de données personnalisées), vous pouvez les envelopper dans des objets signal Sigima pour bénéficier de la gestion des métadonnées et des fonctions de traitement."
 
 msgid "Summary"
-msgstr ""
+msgstr "Résumé"
 
 msgid "This example demonstrated the three main ways to create signals in Sigima:"
-msgstr ""
+msgstr "Cet exemple a démontré les trois principales façons de créer des signaux dans Sigima :"
 
 msgid "**Synthetic generation**: Fast creation of standard mathematical functions and distributions using parameter classes. Perfect for testing and simulation."
-msgstr ""
+msgstr "**Génération synthétique** : Création rapide de fonctions mathématiques standard et de distributions à l'aide de classes de paramètres. Parfait pour les tests et la simulation."
 
 msgid "**File loading**: Read data from various scientific and common file formats, with automatic format detection and metadata extraction. Essential for working with experimental data."
-msgstr ""
+msgstr "**Chargement de fichiers** : Lecture de données à partir de divers formats de fichiers scientifiques et courants, avec détection automatique du format et extraction des métadonnées. Essentiel pour travailler avec des données expérimentales."
 
 msgid "**NumPy array conversion**: Wrap existing array data with Sigima's rich metadata and processing capabilities. Ideal for custom workflows and integration with other Python libraries."
-msgstr ""
+msgstr "**Conversion de tableaux NumPy** : Envelopper les données de tableau existantes avec les riches métadonnées et capacités de traitement de Sigima. Idéal pour les flux de travail personnalisés et l'intégration avec d'autres bibliothèques Python."
 
 msgid "All three methods produce equivalent Sigima objects that can be processed, analyzed, and visualized using the same set of tools and functions. Choose the method that best fits your workflow and data source."
-msgstr ""
+msgstr "Les trois méthodes produisent des objets Sigima équivalents qui peuvent être traités, analysés et visualisés à l'aide du même ensemble d'outils et de fonctions. Choisissez la méthode qui convient le mieux à votre flux de travail et à votre source de données."
 
 msgid ":download:`Download Jupyter notebook: signal_creation.ipynb <signal_creation.ipynb>`"
-msgstr ""
+msgstr ":download:`Télécharger le notebook Jupyter : signal_creation.ipynb <signal_creation.ipynb>`"
 
 msgid ":download:`Download Python source code: signal_creation.py <signal_creation.py>`"
-msgstr ""
+msgstr ":download:`Télécharger le code source Python : signal_creation.py <signal_creation.py>`"
 
 msgid ":download:`Download zipped: signal_creation.zip <signal_creation.zip>`"
-msgstr ""
+msgstr ":download:`Télécharger en archive zip : signal_creation.zip <signal_creation.zip>`"
 
 msgid "`Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_"
-msgstr ""
-
+msgstr "`Galerie générée par Sphinx-Gallery <https://sphinx-gallery.github.io>`_"
